# slmodem-sip-bridge

./: Cargo.toml
.github/workflows/: release.yml
src/: ari_control.rs  ari_external_media.rs  bridge.rs  codec.rs  config.rs  dial_string.rs  main.rs  rtp.rs  sdp.rs  sip.rs
