[package]
name = "slmodem-sip-bridge"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust media bridge between slmodemd socket audio and SIP/RTP call paths"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
md5 = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
